--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -35,6 +35,8 @@
     </div>
     <!--Post Zone -->
     <div class="col-md-6">
+        <%= render "posts/form" %>
+        <%= render @posts %>
 
     </div>
     <!-- Profile Activity -->
