--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -11,3 +11,17 @@ body {
   z-index: 1;
   width: 200px;
 }
+
+.front-title {
+	margin-top: 100px;
+  background: rgba(255,255,255,0.8);
+}
+
+.landing {
+  background: image-url("coding.jpg") no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  height: 100vh;
+}
